--- a/index.html
+++ b/index.html
@@ -77,5 +77,90 @@
     // Laad namen bij het openen van de pagina
     loadNames();
   </script>
+
+
+
+
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Aanwezigheidsformulier</title>
+</head>
+<body>
+  <h1>Aanwezigheidsformulier</h1>
+  <form id="attendanceForm">
+    <label for="name">Kies een naam:</label>
+    <select id="name" name="name" required>
+      <option value="" disabled selected>Kies een naam</option>
+    </select>
+    <button type="submit">Verstuur</button>
+  </form>
+  <p id="status"></p>
+
+  <script>
+    // URL van je Google Apps Script (doGet endpoint)
+    const fetchNamesURL = "https://script.google.com/macros/s/AKfycbxe3JbYO-XuVkIdfEjkIpYZuOxkOo1cHxrPHdCTUK8fLHoNRrx59TVjkogFCY-vBP5Y/exec";
+    // URL van je Google Apps Script (doPost endpoint)
+    const submitFormURL = "https://script.google.com/macros/s/AKfycbxe3JbYO-XuVkIdfEjkIpYZuOxkOo1cHxrPHdCTUK8fLHoNRrx59TVjkogFCY-vBP5Y/exec";
+
+    // Ophalen van namen en toevoegen aan de dropdown
+    async function loadNames() {
+      try {
+        const response = await fetch(fetchNamesURL);
+        const names = await response.json();
+
+        const dropdown = document.getElementById("name");
+        names.forEach(name => {
+          const option = document.createElement("option");
+          option.value = name;
+          option.textContent = name;
+          dropdown.appendChild(option);
+        });
+      } catch (error) {
+        console.error("Fout bij het ophalen van namen:", error);
+      }
+    }
+
+    // Verwerk het formulier
+    document.getElementById("attendanceForm").addEventListener("submit", async function (event) {
+      event.preventDefault();
+
+      const name = document.getElementById("name").value;
+      const now = new Date();
+      const hours = now.getHours();
+
+      // Dynamische betaal-links
+      const paymentLinkMorning = "https://betaalverzoek.rabobank.nl/betaalverzoek/?id=gea8-uwnRay7s6KDrqRSHQ";
+      const paymentLinkRest = "https://betaalverzoek.rabobank.nl/betaalverzoek/?id=xEN1-E4ZS9KcDSTSvdXzug";
+
+      const paymentLink = (hours >= 0 && hours < 11) ? paymentLinkMorning : paymentLinkRest;
+
+      // Verzenden naar Google Apps Script
+      try {
+        const response = await fetch(submitFormURL, {
+          method: "POST",
+          body: JSON.stringify({ name, payment: paymentLink }),
+          headers: { "Content-Type": "application/json" },
+        });
+
+        if (response.ok) {
+          document.getElementById("status").textContent = "Bedankt! Je wordt doorgestuurd.";
+          setTimeout(() => {
+            window.location.href = paymentLink;
+          }, 2000);
+        } else {
+          document.getElementById("status").textContent = "Er ging iets mis.";
+        }
+      } catch (error) {
+        document.getElementById("status").textContent = "Fout bij het verzenden van de gegevens.";
+        console.error(error);
+      }
+    });
+
+    // Laad namen bij het openen van de pagina
+    loadNames();
+  </script>
 </body>
 </html>
