--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             };
 
             // Maak een POST-request naar de Apps Script Webservice
-            fetch('YOUR_WEB_APP_URL', {
+            fetch('https://script.google.com/macros/s/AKfycbxe3JbYO-XuVkIdfEjkIpYZuOxkOo1cHxrPHdCTUK8fLHoNRrx59TVjkogFCY-vBP5Y/exec', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
